syntax = "proto3";

option go_package = "github.com/Speakerkfm/iso_example/shipment-api/api/shipment_api";

service ShipmentService {
  rpc CreateShipment (CreateShipmentRequest) returns (CreateShipmentResponse);
}

message CreateShipmentRequest {
  int64 user_id = 1;
  string user_name = 2;
  int64 order_id = 3;
  int64 user_address_id = 4;
}

message CreateShipmentResponse {
  int64 id = 1;
}